--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -52,7 +52,23 @@ section {
 
 .demo a {
   position: absolute;
-  bottom: 20px;
+  bottom: 30px;
+  padding-bottom: 5px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  color: black;
+  font-family : 'E_motion', sans-serif;
+  font-size: 1rem;
+  text-decoration: none;
+}
+
+.demoUP a {
+  position: absolute;
+  bottom: 30px;
+  padding-bottom: 5px;
   left: 50%;
   z-index: 2;
   display: inline-block;
@@ -91,7 +107,7 @@ section {
 </head>
 
 <body>
-  <div class="nav" style="padding-top: 4rem">
+  <div class="nav" style="padding-top: 5rem">
     <a href="assets/PDF/Specimen_ITA.PDF" download>PDF</a>
     <a href="">Trailer</a>
   </div>
@@ -158,9 +174,11 @@ section {
     <a href="#section09" style="padding-top: 2rem;"><span></span>Scroll</a>
   </div>
   <div class="section" id="section09">
-    <section style="padding-top: 2rem;">
+    <section style="padding-top: 2rem;" class="demo">
     <p contenteditable="true" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' 0; font-size: 1em; margin-top:8rem;">[E·motion] Anticipation</p>
     <p contenteditable="true" style="font-variation-settings: 'SAJO' 0, 'DITR' 0, 'ANFE' 0, 'ANSU' -100; font-size: 3em; margin-top: 3rem; border: none; outline: none; padding-right: 2rem; padding-left: 2rem;">A Á Ă Â Ä À Ā Ą Å Ã Æ B C Ć Č Ç Ċ D Ð Ď Đ E É Ě Ê Ë Ė È Ē Ę F G Ğ Ģ Ġ H I Í Î Ï İ Ì Ī Į J K Ķ L Ĺ Ľ Ļ Ł M N Ń Ň Ņ Ŋ Ñ O Ó Ô Ö Ò Ő Ō Ø Õ Œ P Þ Q R Ŕ Ř Ŗ S Ś Š Ş Ș ẞ T Ŧ Ť Ţ Ț U Ú Û Ü Ù Ű Ū Ų Ů V W Ẃ Ŵ Ẅ Ẁ X Y Ý Ŷ Ÿ Ỳ Z Ź Ž Ż a á ă â ä à ā ą å ã æ b c ć č ç ċ d ð ď e é ě ê ë ė è ē ę f g ğ ģ ġ h i í î ï ì ī į j k ķ l ĺ ľ ļ ł m n ń ň ņ ŋ ñ o ó ô ö ò ő ō ø õ œ p þ q r ŕ ř ŗ s ś š ş ș ß t ŧ ť ţ ț u ú û ü ù ű ū ų ů v w ẃ ŵ ẅ ẁ x y ý ŷ ÿ ỳ z ź ž ż ﬁ ﬂ ª º 0 1 2 3 4 5 6 7 8 9 . , : ; … ! ¡ ? ¿ · • * # / \ ( ) { } [ ] - – — _ ‚ „ “ ” ‘ ’ « » ‹ › ” ’ ¢ $ € ₣ £ ¥ + − × ÷ = > < ^ % ‰ ☺ @ & ¶ § © ® ™ ° ♩ ♪ ♫ ff fft ffi ffl ft www</p>
+    <a href="#section01" style="padding-top: 2rem;"><span style="-webkit-transform: rotate(135deg);
+  transform: rotate(135deg);"></span>UP</a>
   </div>
   </div>
 </main>
