spellcheck and wave

--- a/Sketch_variable/abc/A_slider_DV/index.html
+++ b/Sketch_variable/abc/A_slider_DV/index.html
@@ -64,16 +64,16 @@
 
 	<div id="elements">
 	<div id="text">
-		<div><span class="val">150</span><p contenteditable="true" id="text1">AcriMSAT</p><span class="val">150</span></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text2">Apollo 12</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text3">Constellation</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text4">DSN 34 Freedom7</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text5">OSIRIS-REx</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text6">OM2300SGX4 3 5X</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text7">MUSTOOL G1200 12MP 45X Zoom Emz</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text8">The term lidar was originally a portmanteau of light and radar.</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text9">Lidar is commonly used to make high-resolution maps, with applications in surveying, geodesy</p></div>
-		<div><span class="val">1</span><p contenteditable="true" id="text10"> →Lidar Mapping of M6.4 and M7.1 Ridgecrest earthquake sequence. <br>Data collected by NCALM [National Center for Airborne Laser Mapping]</p></div>
+		<div><span class="val">150</span><p contenteditable="true" spellcheck="false" id="text1">AcriMSAT</p><span class="val">150</span></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text2">Apollo 12</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text3">Constellation</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text4">DSN 34 Freedom7</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text5">OSIRIS-REx</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text6">OM2300SGX4 3 5X</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text7">MUSTOOL G1200 12MP 45X Zoom Emz</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text8">The term lidar was originally a portmanteau of light and radar.</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text9">Lidar is commonly used to make high-resolution maps, with applications in surveying, geodesy</p></div>
+		<div><span class="val">1</span><p contenteditable="true" spellcheck="false" id="text10"> →Lidar Mapping of M6.4 and M7.1 Ridgecrest earthquake sequence. <br>Data collected by NCALM [National Center for Airborne Laser Mapping]</p></div>
 	</div>
 	</div>
 
