--- a/Optotype/index.html
+++ b/Optotype/index.html
@@ -54,7 +54,7 @@
 			  		<p class="slidertext">Leading</p>
 			  	</div>
 			  	<div class="col-sm-3 ">
-			  		<input type="range" min="1" max="300" value="100" class="slider" id="Leading">
+			  		<input type="range" min="85" max="185" value="130" class="slider" id="Leading">
 		  		</div>
 
 			</div>
@@ -64,14 +64,18 @@
 
 	<div id="elements">
 	<div id="text">
-		<p contenteditable="true" id="text1">AcriMSAT</p>
-		<p contenteditable="true" id="text2">Apollo 12</p>
-		<p contenteditable="true" id="text3">Constellation</p>
-		<p contenteditable="true" id="text4">DSN 34 Freedom7</p>
-		<p contenteditable="true" id="text5">OSIRIS-REx</p>
-		<p contenteditable="true" id="text6">OM2300SGX4 3 5X</p>
+		<div id="divtext"><span class="val">200</br>———</br>300</span><span class="valright">200</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text1">AcriMSAT</p></div>
+		<div id="divtext"><span class="val">150</br>———</br>300</span><span class="valright">150</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text2">Apollo 12</p></div>
+		<div id="divtext"><span class="val">100</br>———</br>300</span><span class="valright">100</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text3">Constellation</p></div>
+		<div id="divtext"><span class="val">50</br>———</br>300</span><span class="valright">50</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text4">DSN 34 Freedom7</p></div>
+		<div id="divtext"><span class="val">30</br>———</br>300</span><span class="valright">30</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text5">OSIRIS-REx</p></div>
+		<div id="divtext"><span class="val">20</br>———</br>300</span><span class="valright">20</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text6">OM2300SGX4 3 5X</p></div>
+		<div id="divtext"><span class="val">15</br>———</br>300</span><span class="valright">15</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text7">MUSTOOL G1200 12MP 45X Zoom Emz</p></div>
+		<div id="divtext"><span class="val">10</br>———</br>300</span><span class="valright">10</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text8">The term lidar was originally a portmanteau of light and radar.</p></div>
+		<div id="divtext"><span class="val">8</br>———</br>300</span><span class="valright">8</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text9">Lidar is commonly used to make high-resolution maps, with applications in surveying, geodesy</p></div>
+		<div id="divtext"><span class="val">6</br>———</br>300</span><span class="valright">6</br>———</br>300</span><p contenteditable="true" spellcheck="false" class="text10"> →Lidar Mapping of M6.4 and M7.1 Ridgecrest earthquake sequence. <br>Data collected by NCALM [National Center for Airborne Laser Mapping]</p></div>
+
 	</div>
-	<p>Value: <span id="demo"></span></p>
 	</div>
 
 	<div id="info">
@@ -96,8 +100,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 	<script src="https://unpkg.com/ml5@0.3.1/dist/ml5.min.js"></script>
-	<script src="./js/index_main.js"></script>
-	<script src="./js/distance.js"></script>
+	<script src="main.js"></script>
+	<script src="distance.js"></script>
 	<div class="debug"></div>
 </body>
 </html>
