--- a/Optotype/index.html
+++ b/Optotype/index.html
@@ -100,8 +100,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 	<script src="https://unpkg.com/ml5@0.3.1/dist/ml5.min.js"></script>
-	<script src="main.js"></script>
-	<script src="distance.js"></script>
+	<script src="./js/index_main.js"></script>
+	<script src="./js/distance.js"></script>
 	<div class="debug"></div>
 </body>
 </html>
