Sostituisco filmato per troppi MB

--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>[E·motion]</title>
+  <title>Trial</title>
   <meta name="description"              content="Trial">
   <meta name="author"                             content="Chiara Crivelli">
   <meta name="viewport"                 content="width=device-width, initial-scale=1">
@@ -18,9 +18,9 @@
 
 <main class="buttonVariable">  
   <div id="myDIV">
-    <button class="btn btnVoice" id="btnVoice">Voice</button>
-    <button class="btn btnMouse" id="btnMouse">Mouse</button>
-    <button class="btn active" id="btnSlider">Slider</button>
+    <button class="btn btnVoice" id="btnVoice"  style="z-index: 20 !important;">Voice</button>
+    <button class="btn btnMouse" id="btnMouse"  style="z-index: 20 !important;">Mouse</button>
+    <button class="btn active" id="btnSlider"  style="z-index: 20 !important;">Slider</button>
   </div>
 </main>
 
@@ -36,8 +36,7 @@
 <main class="container">
     <div id="elements">
     <div id="text">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 50vh; border: none; outline: none; line-height: 1px; user-select: none; width: 100vw; font-size: 10rem;
-"contenteditable="true" class="demo-text" id="text">[E·motion]</p>
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 35vw; border: none; outline: none; line-height: 0px; user-select: none; width: 100vw; font-size: 8vw; background: none;"contenteditable="true" class="demo-text" id="text">[E·motion]</p>
     </div>
     </div>
 
@@ -107,6 +106,7 @@
 </script>
 
 <script src="assets/js/main_slider.js"></script>
+<script src="assets/js/main.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
