--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="background-color:black; margin:0; padding: 0;">
 <head>
   <meta charset="UTF-8">
-  <title>Video</title>
+  <title>[E·motion]</title>
   <meta name="description"              content="Video">
   <meta name="author"                             content="Chiara Crivelli">
   <meta name="viewport"                 content="width=device-width, initial-scale=1">
@@ -12,67 +12,167 @@
   <meta name="msapplication-navbutton-color"      content="black">
   <meta name="apple-mobile-web-app-status-bar-style"  content="black">
   <link rel="stylesheet" href="assets/css/style.css">
+  
+  <script src="https://kit.fontawesome.com/e0ffcb397c.js" crossorigin="anonymous"></script>
+
+  <style>
+
+    .containerVideo{
+      display: flex;
+      background: black;
+      justify-content: center;
+      align-items: center;
+      height: 100vh; 
+    }
+
+    .video {
+      width: 100%;
+      z-index: -10 !important;
+    }
+
+    .c-video {
+      width: 100%;
+      max-width: 100%;
+      position: relative;
+      /*overflow: hidden;*/
+    }
+
+/*    .c-video:hover .controls {
+      transform: translateY(0); 
+    }*/
+
+    .controls {
+      display: flex;
+      position: absolute;
+      top: 7vw;
+      flex-wrap: wrap;
+      width: 100%;
+      background-color: black;
+      /*transform: translateY(100%) translateY(-5px); */
+    }
+
+    .buttonsPlayPause {
+      position: absolute;
+      top:17.5vw;
+      padding:0;
+      margin:0;
+      /*padding-left:50%;*/
+    }
+
+    .buttonsPlayPause button{
+      background: none;
+      border: 0;
+      outline: 0;
+      cursor: pointer;
+      position: absolute;
+      margin:0;
+    }
+
+    .buttonsPlayPause button:before{
+      content: "\f01d"; 
+      font-family: "FontAwesome";
+      width: 100vw;
+      height: 30vw;
+      /*top: 500px;*/
+      display: inline-block;
+      font-size: 8vw;
+      color: rgba(255,255,255,0.8);
+      -webkit-font-smoothing: antialiased;
+    }
+
+    .buttonsPlayPause button.play:before{
+      content: "\f01d";
+      color: rgba(255,255,255,0.8);
+    }
+
+    .buttonsPlayPause button.pause:before{
+      content: "";
+    }
+
+    .orange-bar {
+      position: absolute;
+      height: 2.5px;
+      top: 42.4vw;
+      left: 0;
+      width: 100%;
+      background: none;
+      /*background-color: red;*/
+    }
+
+    .orange-juice {
+      height: 2.5px;
+      background-color: white;
+    }
+
+  </style>
 </head>
 
 <body style="background-color:black; margin:0; padding: 0;">
 
     <div class="topnav" style="background: none;">
-      <a href="index.html">[E·motion]</a>
+      <a href="index.html" class="active">[E·motion]</a>
       <a href="index_About.html">About</a>
       <div class="topnav-right" style="background: none;">
         <a href="index_Specimen.html">Specimen</a>
-        <a href="index_Trial.html" style="border: 0.2px solid rgb(255,255,255,0.5);"class="active">Trial</a>
+        <a href="index_Trial.html" style="border: 0.2px solid rgb(255,255,255,0.5);">Trial</a>
       </div>
     </div>
 
-      <video style="z-index: -10; margin-top:-1.40rem;" width="100%" height="100%" controls>
-          <source src="Khan_1.mp4" type="video/mp4">
-      </video>
+    <div class="containerVideo">
+      <div class="c-video">
+        <video class="video" src="Movie.mp4"></video>
+        <div class="controls">
+          <div class="buttonsPlayPause">
+            <button id="play-pause"></button>
+          </div>
+          <div class="orange-bar">
+            <div class="orange-juice"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 <main class="container">
     <div id="elements">
     <div id="text">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; top: 80%;
-      left: 50%; transform: translate(-50%, -50%); border: none; outline: none; font-size: 2rem; color: white; z-index:10; background: none;" class="demo-text" id="out"></p>
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; top: 75%; left: 50%; transform: translate(-50%, -50%); -webkit-text-stroke-width:0.65px; -webkit-text-fill-color:rgba(255,255,255,1); font-size: 2.8vw; color: #000; z-index:10 !important; background: none;" class="demo-text" id="out"></p>
     </div>
     </div>
 
-    <!-- SAJO Controls -->
-    <div class="slider-container" style="background: black; color: white;">
-      <input type="range" min="-100" max="100" value="0" class="slider1" id="text-SAJO" name="text-SAJO" data-index="0">
-    <!-- DITR Controls -->
-      <input type="range" min="-100" max="100" value="0" class="slider1" id="text-DITR" name="text-DITR" data-index="1">
-    <!-- ANFE Controls -->
-      <input type="range" min="-100" max="100" value="0" class="slider1" id="text-ANFE" name="text-ANFE" data-index="2">
-    <!-- ANSU Controls -->
-      <input type="range" min="-100" max="100" value="0" class="slider1" id="text-ANSU" name="text-ANSU" data-index="3">
+    <div class="hover">
+      <div class="slider-container" style="background: none; color: white; position:absolute; bottom: 2.5rem">
+        <input type="range" min="-100" max="100" value="0" class="slider1" id="text-SAJO" name="text-SAJO" data-index="0">
+        <input type="range" min="-100" max="100" value="0" class="slider1" id="text-DITR" name="text-DITR" data-index="1">
+        <input type="range" min="-100" max="100" value="0" class="slider1" id="text-ANFE" name="text-ANFE" data-index="2">
+        <input type="range" min="-100" max="100" value="0" class="slider1" id="text-ANSU" name="text-ANSU" data-index="3">
 
-      <div class="slider-controls" style="background:black; color: white;">
-        <label for="text-SAJO" style="background:black; color:white;" class="slider-label-left">Sadness/ Joy </label>
-        <label for="text-SAJO" style="background:black; color:white;" class="slider-label-right">
-        [<span class="output" style="background:black; color: white;" data-index="0">0</span>] 
-        </label>
-      </div>
+        <div class="slider-controls" style="background:none; color: white;">
+          <label for="text-SAJO" style="background:none; color:white;" class="slider-label-left">Sadness/ Joy </label>
+          <label for="text-SAJO" style="background:none; color:white;" class="slider-label-right">
+          [<span class="output" style="background:none; color: white;" data-index="0">0</span>] 
+          </label>
+        </div>
 
-      <div class="slider-controls" style="background:black; color: white;">
-        <label for="text-DITR" style="background:black; color: white;" class="slider-label-left">Disgust/ Trust</label>
-        <label for="text-SAJO" style="background:black; color: white" class="slider-label-right">
-        [<span class="output" style="background:black; color:white;" data-index="1">0</span>] 
-        </label>
-      </div>
+        <div class="slider-controls" style="background:none; color: white;">
+          <label for="text-DITR" style="background:none; color: white;" class="slider-label-left">Disgust/ Trust</label>
+          <label for="text-SAJO" style="background:none; color: white;" class="slider-label-right">
+          [<span class="output" style="background:none; color:white;" data-index="1">0</span>] 
+          </label>
+        </div>
 
-      <div class="slider-controls" style="background:black; color: white;">
-        <label for="text-ANFE" style="background:black; color: white;" class="slider-label-left">Anger/ Fear</label>
-        <label for="text-SAJO" style="background:black; color: white;" class="slider-label-right">
-        [<span class="output" style="background:black; color: white;" data-index="2">0</span>] 
-        </label>
-      </div>
+        <div class="slider-controls" style="background:none; color: white;">
+          <label for="text-ANFE" style="background:none; color: white;" class="slider-label-left">Anger/ Fear</label>
+          <label for="text-SAJO" style="background:none; color: white;" class="slider-label-right">
+          [<span class="output" style="background:none; color: white;" data-index="2">0</span>] 
+          </label>
+        </div>
 
-      <div class="slider-controls" style="background:black; color: white;">
-        <label for="text-ANSU" style="background:black; color: white;" class="slider-label-left">Anticipation/ Surprise</label>
-        <label for="text-SAJO" style="background:none; color: white;" class="slider-label-right">
-          [<span class="output" style="background:none; color: white;" data-index="3">0</span>] 
-        </label>
+        <div class="slider-controls" style="background:none; color: white;">
+          <label for="text-ANSU" style="background:none; color: white;" class="slider-label-left">Anticipation/ Surprise</label>
+          <label for="text-SAJO" style="background:none; color: white;" class="slider-label-right">
+            [<span class="output" style="background:none; color: white;" data-index="3">0</span>] 
+          </label>
+        </div>
       </div>
     </div>
   </main>
@@ -102,6 +202,7 @@
 </script>
 
 <script src="assets/js/main_slider_Video.js"></script>
+<script src="assets/js/script.js"></script>
 
 </body>
 </html>
