--- a/E_motion/index_About.html
+++ b/E_motion/index_About.html
@@ -119,6 +119,7 @@
 </script>
 
 <script src="assets/js/main_slider.js"></script>
+<script src="assets/js/main_About.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
