--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -18,9 +18,9 @@
 
 <main class="buttonVariable">  
   <div id="myDIV">
-    <button class="btn btnVoice" id="btnVoice"  style="z-index: 20 !important;">Voice</button>
-    <button class="btn btnMouse" id="btnMouse"  style="z-index: 20 !important;">Mouse</button>
-    <button class="btn active" id="btnSlider"  style="z-index: 20 !important;">Slider</button>
+    <button class="btn btnVoice" id="btnVoice"  style="z-index: 20 !important;" onclick="myFunction()">Voice</button>
+    <button class="btn btnMouse" id="btnMouse"  style="z-index: 20 !important;" >Mouse</button>
+    <button class="btn active" id="btnSlider"  style="z-index: 20 !important;" >Slider</button>
   </div>
 </main>
 
@@ -35,8 +35,8 @@
 
 <main class="container">
     <div id="elements">
-    <div id="text">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 35vw; border: none; outline: none; line-height: 0px; user-select: none; width: 100vw; font-size: 8vw; background: none;"contenteditable="true" class="demo-text" id="text">[E·motion]</p>
+    <div id="text" style="font-size: 8vw;">
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 60%; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="demo-text" id="text">[E·motion]</p>
     </div>
     </div>
 
