--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -19,7 +19,7 @@
 
     .containerVideo{
       display: flex;
-      background: black;
+      background: none;
       justify-content: center;
       align-items: center;
       height: 100vh; 
@@ -125,9 +125,9 @@
           <div class="buttonsPlayPause">
             <button id="play-pause"></button>
           </div>
-          <div class="orange-bar">
+<!--           <div class="orange-bar">
             <div class="orange-juice"></div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
