--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -101,7 +101,7 @@
 
     .orange-juice {
       height: 2.5px;
-      background-color: white;
+      background-color: none;
     }
 
   </style>
@@ -125,9 +125,9 @@
           <div class="buttonsPlayPause">
             <button id="play-pause"></button>
           </div>
-<!--           <div class="orange-bar">
+          <div class="orange-bar">
             <div class="orange-juice"></div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
