aggiusto bottoni, aggiungo timebar, inserisco video

--- a/E_motion/index_Specimen.html
+++ b/E_motion/index_Specimen.html
@@ -112,7 +112,7 @@ section {
 <body>
   <div class="nav" style="padding-top: 5rem">
     <a href="assets/PDF/Specimen_EN.PDF" download>PDF</a>
-    <a href="">Trailer</a>
+    <a href="assets/video/Emotion_Trailer.mp4" download>Trailer</a>
   </div>
 
   <div class="topnav">
