--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -104,6 +104,16 @@
       background-color: white;
     }
 
+    .timeline__drag {
+        width: 1px;
+        height: 20px;
+        top: -10px;
+        background-color: yellow;
+        position: absolute;
+        z-index: 2;
+        transform-origin: 0 0;
+      }
+
   </style>
 </head>
 
@@ -114,7 +124,7 @@
       <a href="index_About.html">About</a>
       <div class="topnav-right" style="background: none;">
         <a href="index_Specimen.html">Specimen</a>
-        <a href="index_Trial.html" style="border: 0.2px solid rgb(255,255,255,0.5);">Trial</a>
+        <a href="index_Trial.html" style="background: none;">Trial</a>
       </div>
     </div>
 
