--- a/posNet/index.html
+++ b/posNet/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>prova_posNet</title>
+	<title>posNet</title>
 	<meta name="description" content="Creative Coding">
 	<meta name="author" content="Chiara">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
@@ -20,15 +20,15 @@
 
 	<style type="text/css">
 		body{
-			background-color: black;
-			color: white;	
+			background-color: white;
+			color: black;	
 		}
 
 		@font-face {
 			font-family: ‘Font’;
 			src: url('DVGX.ttf') format('truetype-variations');
 			/*font-weight: -100 100;*/
-			color: white;
+			color: black;
 		}
 
 
@@ -46,7 +46,7 @@
 			text-align: center;
 			padding: 30% 0;
 	
-			color: white;
+			color: black;
 			margin: 0;
 			
 
