--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -18,7 +18,7 @@
 <body class="disable-select disable-scroll">
 
 	
-	<div id="demo-text">☺</div>
+	<div id="demo-text" style="text-align: center; font-size: 200em;">☺</div>
 
 	<!-- Listener che blocca il "bounce" -->
 	<script type="text/javascript">
