--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -11,14 +11,63 @@
 	<meta name="theme-color" 							content="black">
 	<meta name="msapplication-navbutton-color" 			content="black">
 	<meta name="apple-mobile-web-app-status-bar-style" 	content="black">
-	
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet"       href="../../css/style.css">
+
+	<style type="text/css">
+		body{
+			background-color: black;
+			color: white;	
+		}
+
+		@font-face {
+		  font-family: 'E_motion';
+		  src: url('E_motionGX.ttf') format('truetype-variations');
+		  font-stretch: 75% 100%;
+		  font-style: oblique 0deg 12deg;
+		  font-weight: 100 900;
+		  -webkit-font-smoothing: antialiased;
+		}
+
+		:root {
+		  --text-SAJO: 0;
+		  --text-DITR: 0;
+		  --text-ANFE: 0;
+		  --text-ANSU: 0;
+		}
+
+		/*
+		canvas{
+			display: none;
+		}*/
+
+		.text {
+		  font-family: "E_motion", sans-serif;
+
+		  /*font-size: "font-size";*/
+		  /*font-size: 10rem;*/
+		  font-SAJO: var(--text-SAJO);
+		  font-ANFE: var(--text-ANFE);
+		  font-DITR: var(--text-DITR);
+		  font-ANSU: var(--text-ANSU);
+		  font-variation-settings: "SAJO" var(--text-SAJO), "DITR" var(--text-DITR), "ANFE" var(--text-ANFE), "ANSU" var(--text-ANSU);
+
+		  background-color: black;
+		  color: white;
+
+		  z-index: -10 !important;
+		}
+
+	</style>
+
 </head>
 
 <body class="disable-select disable-scroll">
 
 	
-	<div id="demo-text" style="text-align: center; font-size: 200em;">☺</div>
+	<div id="text">☺</div>
+	<script src="../../js/lib/p5/p5.min.js"></script>
+	<script src="../../js/lib/p5/addons/p5.sound.min.js"></script>
+	<script src="main_slider.js"></script>
 
 	<!-- Listener che blocca il "bounce" -->
 	<script type="text/javascript">
@@ -30,11 +79,6 @@
 		}
 	</script>
 	<div class="debug"></div>
-
-<script src="assets/js/main_smile.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
 
 </body>
 </html>
