--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -11,13 +11,9 @@
 	<meta name="theme-color" 							content="black">
 	<meta name="msapplication-navbutton-color" 			content="black">
 	<meta name="apple-mobile-web-app-status-bar-style" 	content="black">
-	<link rel="stylesheet"       href="../../css/style.css">
+	<link rel="stylesheet"       href="assets/css/style.css">
 
 	<style type="text/css">
-		body{
-			background-color: black;
-			color: white;	
-		}
 
 		@font-face {
 		  font-family: 'E_motion';
@@ -79,6 +75,10 @@
 		}
 	</script>
 	<div class="debug"></div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
 
 </body>
 </html>
