--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -36,7 +36,7 @@
 			display: none;
 		}*/
 
-		.text {
+		.text-smile {
 		  font-family: "E_motion", sans-serif;
 
 		  /*font-size: "font-size";*/
@@ -60,10 +60,7 @@
 <body class="disable-select disable-scroll">
 
 	
-	<div id="text">☺</div>
-	<script src="../../js/lib/p5/p5.min.js"></script>
-	<script src="../../js/lib/p5/addons/p5.sound.min.js"></script>
-	<script src="main_slider.js"></script>
+	<div id="text-smile>☺</div>
 
 	<!-- Listener che blocca il "bounce" -->
 	<script type="text/javascript">
@@ -75,6 +72,8 @@
 		}
 	</script>
 	<div class="debug"></div>
+
+	<script src="main_smile.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
