--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -60,20 +60,20 @@
 <body class="disable-select disable-scroll">
 
 	
-	<div id="text-smile>☺</div>
+	<div id="text-smile">☺</div>
 
 	<!-- Listener che blocca il "bounce" -->
-	<script type="text/javascript">
+<!-- 	<script type="text/javascript">
 		document.ontouchmove = function(e){
 			e.preventDefault();
 		}
 		document.ontouchmove = function(e){
 		 	e.preventDefault();
 		}
-	</script>
+	</script> -->
 	<div class="debug"></div>
 
-	<script src="main_smile.js"></script>
+	<script src="assets/js/main_smile.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
