--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -13,54 +13,12 @@
 	<meta name="apple-mobile-web-app-status-bar-style" 	content="black">
 	<link rel="stylesheet"       href="assets/css/style.css">
 
-	<style type="text/css">
-
-		@font-face {
-		  font-family: 'E_motion';
-		  src: url('E_motionGX.ttf') format('truetype-variations');
-		  font-stretch: 75% 100%;
-		  font-style: oblique 0deg 12deg;
-		  font-weight: 100 900;
-		  -webkit-font-smoothing: antialiased;
-		}
-
-		:root {
-		  --text-SAJO: 0;
-		  --text-DITR: 0;
-		  --text-ANFE: 0;
-		  --text-ANSU: 0;
-		}
-
-		/*
-		canvas{
-			display: none;
-		}*/
-
-		.text-smile {
-		  font-family: "E_motion", sans-serif;
-
-		  /*font-size: "font-size";*/
-		  /*font-size: 10rem;*/
-		  font-SAJO: var(--text-SAJO);
-		  font-ANFE: var(--text-ANFE);
-		  font-DITR: var(--text-DITR);
-		  font-ANSU: var(--text-ANSU);
-		  font-variation-settings: "SAJO" var(--text-SAJO), "DITR" var(--text-DITR), "ANFE" var(--text-ANFE), "ANSU" var(--text-ANSU);
-
-		  background-color: black;
-		  color: white;
-
-		  z-index: -10 !important;
-		}
-
-	</style>
-
 </head>
 
 <body class="disable-select disable-scroll">
 
 	
-	<div id="text-smile">☺</div>
+	<div id="smile-text">☺</div>
 
 	<!-- Listener che blocca il "bounce" -->
 <!-- 	<script type="text/javascript">
