--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -17,9 +17,13 @@
 
 <body class="disable-select disable-scroll">
 
-	
-	<div id="smile-text">☺</div>
-
+<main class="container">
+    <div id="elements">
+    <div id="text" style="font-size: 8vw;">
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 60vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="demo-text" id="text">☺</p>
+    </div>
+    </div>
+ </main>
 	<!-- Listener che blocca il "bounce" -->
 <!-- 	<script type="text/javascript">
 		document.ontouchmove = function(e){
