--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -19,11 +19,12 @@
 
 <main class="container">
     <div id="elements">
-    <div id="text" style="font-size: 8vw;">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 60vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="demo-text" id="text">☺</p>
+    <div id="text" style="font-size: 10vw;">
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 100vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="smile-text" id="text">☺</p>
     </div>
     </div>
  </main>
+
 	<!-- Listener che blocca il "bounce" -->
 <!-- 	<script type="text/javascript">
 		document.ontouchmove = function(e){
