--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -19,8 +19,8 @@
 
 <main class="container">
     <div id="elements">
-    <div id="text" style="font-size: 10vw;">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 100vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="smile-text" id="text">☺</p>
+    <div id="text" style="font-size: 8vw;">
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 80vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="demo-text" id="smile-text">☺</p>
     </div>
     </div>
  </main>
