--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -17,13 +17,18 @@
 
 <body class="disable-select disable-scroll">
 
+<main class="buttonVariable">  
+  <div id="myDIV">
+  </div>
+</main>
+
 <main class="container">
     <div id="elements">
-    <div id="text" style="font-size: 8vw;">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 80vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="demo-text" id="smile-text">☺</p>
+    <div id="text" style="font-size: 20vw;">
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 30vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="smile-text" id="text">☺</p>
     </div>
     </div>
- </main>
+  </main>
 
 	<!-- Listener che blocca il "bounce" -->
 <!-- 	<script type="text/javascript">
