--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -25,7 +25,7 @@
 <main class="container">
     <div id="elements">
     <div id="text" style="font-size: 20vw;">
-      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 30vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="smile-text" id="text">☺</p>
+      <p style="display: flex; justify-content: center; align-items: center; position:absolute; height: 50vw; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;"contenteditable="true" class="smile-text" id="text">☺</p>
     </div>
     </div>
   </main>
