--- a/E_motion/Smile/index.html
+++ b/E_motion/Smile/index.html
@@ -11,7 +11,7 @@
 	<meta name="theme-color" 							content="black">
 	<meta name="msapplication-navbutton-color" 			content="black">
 	<meta name="apple-mobile-web-app-status-bar-style" 	content="black">
-	<link rel="stylesheet"       href="../../css/style.css">
+	<link rel="stylesheet"       href="assets/css/style.css">
 
 	<style type="text/css">
 		body{
@@ -27,11 +27,6 @@
 			font-weight: 100 900;
 			-webkit-font-smoothing: antialiased;
 		}
-
-		/*
-		canvas{
-			display: none;
-		}*/
 
 		#text {
 			position: absolute;
@@ -58,9 +53,10 @@
 
 	
 	<div id="text">☺</div>
-	<script src="../../js/lib/p5/p5.min.js"></script>
-	<script src="../../js/lib/p5/addons/p5.sound.min.js"></script>
-	<script src="main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
+	<script src="assets/js/main_smile.js"></script>
 
 	<!-- Listener che blocca il "bounce" -->
 	<script type="text/javascript">
