--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -39,7 +39,7 @@
 <body class="disable-select disable-scroll">
 
 	
-	<div id="text" style="display: flex; justify-content: center; align-items: center; position:absolute; height: 100vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;">☺</div>
+	<div id="text" style="size:3rem; display: flex; justify-content: center; align-items: center; position:absolute; height: 90vh; border: none; outline: none; width: 100vw; background: none; z-index: 10 !important;">☺</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
