--- a/E_motion/index_About.html
+++ b/E_motion/index_About.html
@@ -21,7 +21,7 @@
 <main class="buttonVariable">  
   <div id="myDIV">
     <button class="btn btnVoice" id="btnVoice">Voice</button>
-    <!-- <button class="btn btnMouse" id="btnMouse">Mouse</button> -->
+    <button class="btn btnMouse" id="btnMouse">Mouse</button>
     <button class="btn active" id="btnSlider">Slider</button>
   </div>
 </main>
