--- a/E_motion/index_Trial.html
+++ b/E_motion/index_Trial.html
@@ -18,7 +18,7 @@
 
 <main class="buttonVariable">  
   <div id="myDIV">
-    <button class="btn btnVoice" id="btnVoice"  style="z-index: 20 !important;" onclick="myFunction()">Voice</button>
+    <button class="btn btnVoice" id="btnVoice"  style="z-index: 20 !important;">Voice</button>
     <!-- <button class="btn btnMouse" id="btnMouse"  style="z-index: 20 !important;" >Mouse</button> -->
     <button class="btn active" id="btnSlider"  style="z-index: 20 !important;" >Slider</button>
   </div>
