--- a/E_motion/index.html
+++ b/E_motion/index.html
@@ -114,6 +114,30 @@
         transform-origin: 0 0;
       }
 
+
+      #custom-seekbar
+      {  
+        cursor: pointer;
+        height: 10px;
+        margin-bottom: 10px;
+        outline: thin solid orange;
+        overflow: hidden;
+        position: relative;
+        width: 400px;
+      }
+      #custom-seekbar span
+      {
+        background-color: orange;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 10px;
+        width: 0px;
+      }
+
+      /* following rule is for hiding Stack Overflow's console  */
+      .as-console-wrapper{ display: none !important;}
+
   </style>
 </head>
 
@@ -127,6 +151,11 @@
         <a href="index_Trial.html">Trial</a>
       </div>
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<div id="custom-seekbar">
+  <span></span>
+</div>
 
     <div class="containerVideo">
       <div class="c-video">
