modifico parametro sound

--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -32,6 +32,14 @@
 		  	font-variation-settings: "SAJO" var(--text-SAJO), "DITR" var(--text-DITR), "ANFE" var(--text-ANFE), "ANSU" var(--text-ANSU);
 		}
 
+		html {
+		  box-sizing: border-box;
+		  display: block !important;
+		  background-color: black;
+		  color: green;
+		}
+
+
 	</style>
 
 </head>
