--- a/E_motion/index_Smile.html
+++ b/E_motion/index_Smile.html
@@ -39,6 +39,14 @@
 		  color: green;
 		}
 
+		body {
+		  margin: 0;
+		  padding:0;
+		  background-color: green;
+		  color: white;
+		  -webkit-font-smoothing: antialiased;
+		}
+
 
 	</style>
 
